--- a/src/app/case-studies/boombocs/boombocs.component.html
+++ b/src/app/case-studies/boombocs/boombocs.component.html
@@ -21,29 +21,40 @@
         BoomBocs came to us looking to revamp their website and give it its own, distinct identity. We welcomed the challenge.
       </p>
 
-      <p>
-        We met with Jonny to discuss what the company were about,
-        the people involved and the <a [routerLink]="['/brand/messaging']">message</a> they were looking to get across with the new design.
-        Jonny was clear that it visually needed to look sleek and professional.
-        Not gimmicky and needed to let the speakers provide the colour instead of the website content itself.
-      </p>
+      <ul class="case-study__credits-list">
+        <li><strong>Suzannah James</strong> - UI Design</li>
+        <li><strong>Samuel Gregory</strong> - Project lead and Developer</li>
+      </ul>
 
-      <p>
-        It was also important that we made sure that we could get results given short deadlines.
-        <a [routerLink]="['/web-development/ecommerce']">eCommerce</a> sites are notoriously in-depth, with account pages, checkout journeys and product pages.
-        We proposed the idea of highlighting key pages that we could give attention to and deliver those initially and launch sooner rather than later.
-        This was agreed and the stage was set.
-      </p>
+      <section>
+        <header>
+          <h2>The Project</h2>
+        </header>
 
-      <p>
-        From this <a [routerLink]="['/service/strategy']">initial meeting</a> we were able to produce a moodboard of the sort of things we felt captured what we had discussed.
-        It was also a useful tool to refer to when we came round to designing to help inspire us and move things forward efficiently.
-      </p>
+        <p>
+          We met with Jonny to discuss what the company were about,
+          the people involved and the <a [routerLink]="['/brand/messaging']">message</a> they were looking to get across with the new design.
+          Jonny was clear that it visually needed to look sleek and professional.
+          Not gimmicky and needed to let the speakers provide the colour instead of the website content itself.
+        </p>
 
-      <figure class="margin-bottom--lg text-center">
-        <img src="assets/images/boombocs-pinterest.jpg" data-aos="fade-up" alt="Boombocs moodboard" class="img-fluid">
-        <figcaption>Boombocs moodboard</figcaption>
-      </figure>
+        <p>
+          It was also important that we made sure that we could get results given short deadlines.
+          <a [routerLink]="['/web-development/ecommerce']">eCommerce</a> sites are notoriously in-depth, with account pages, checkout journeys and product pages.
+          We proposed the idea of highlighting key pages that we could give attention to and deliver those initially and launch sooner rather than later.
+          This was agreed and the stage was set.
+        </p>
+
+        <p>
+          From this <a [routerLink]="['/service/strategy']">initial meeting</a> we were able to produce a moodboard of the sort of things we felt captured what we had discussed.
+          It was also a useful tool to refer to when we came round to designing to help inspire us and move things forward efficiently.
+        </p>
+
+        <figure class="margin-bottom--lg text-center">
+          <img src="assets/images/boombocs-pinterest.jpg" data-aos="fade-up" alt="Boombocs moodboard" class="img-fluid">
+          <figcaption>Boombocs moodboard</figcaption>
+        </figure>
+      </section>
 
       <section class="clearfix section">
         <header>
