--- a/src/app/case-studies/northstar/northstar.component.html
+++ b/src/app/case-studies/northstar/northstar.component.html
@@ -15,6 +15,20 @@
   <div class="section">
     <div class="container-fluid">
       <section>
+        <p>
+          North Star Law are a law firm based in Kensington, London. North Star Law strives to provide intelligent,
+          dynamic solutions to the clients’ legal problems and specialise in Tax, Wills and Estate Planning, Property,
+          Immigration, Dispute Resolution, Divorce / Children Disputes.
+
+        </p>
+
+        <ul class="case-study__credits-list">
+          <li><strong>Suzannah James</strong> - UI Design</li>
+          <li><strong>Samuel Gregory</strong> - Project lead and Developer</li>
+        </ul>
+      </section>
+
+      <section>
         <header>
           <h2>The Project</h2>
         </header>
