--- a/src/app/case-studies/veratrak/veratrak.component.html
+++ b/src/app/case-studies/veratrak/veratrak.component.html
@@ -15,15 +15,17 @@
   <div class="section">
     <div class="container-fluid">
       <section>
-        <header>
-          <h2>Who are Veratrak and what do they do?</h2>
-        </header>
-
         <p>
           Veratrak is a cutting-edge technology created by a start-up in the heart of east London.
           Their product aims to solve many problems that riddle the pharmaceutical industry,
           the main one being the collaboration and sharing of drug related documentation in the supply chain that has historically been a difficult and lengthy process.
         </p>
+
+        <ul class="case-study__credits-list">
+          <li><strong>Suzannah James</strong> - UI Design</li>
+          <li><strong>Jo Durrant</strong> - Logo Design</li>
+          <li><strong>Samuel Gregory</strong> - Project lead and Developer</li>
+        </ul>
       </section>
 
       <section class="section">
