--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,7 +2,7 @@
   <div class="container-fluid">
     <h1 class="sr-only">Jupiter and the Giraffe</h1>
 
-    <p class="home__tagline text-center">
+    <p class="home__tagline text-center" data-aos="fade-in">
       We'll help your company find its voice, establish its brand and build you a kick-ass website.
     </p>
 
