move type of project to subtitle

--- a/src/app/case-studies/boombocs/boombocs.component.html
+++ b/src/app/case-studies/boombocs/boombocs.component.html
@@ -6,7 +6,8 @@
 
     <div class="case-study__image-text">
       <header class="container-fluid">
-        <h1>Boombocs - Website redesign/build</h1>
+        <h1>Boombocs</h1>
+        <p>Website redesign/build</p>
         <strong>Launched: Oct 2018</strong>
       </header>
     </div>
