--- a/src/app/case-studies/epoch-brand-website/epoch-brand-website.component.html
+++ b/src/app/case-studies/epoch-brand-website/epoch-brand-website.component.html
@@ -6,7 +6,8 @@
 
     <div class="case-study__image-text">
       <header class="container-fluid">
-        <h1>EPOCH - Branding and website</h1>
+        <h1>EPOCH</h1>
+        <p>Branding and website</p>
         <strong>Launched: Oct 2018</strong>
       </header>
     </div>
