--- a/src/app/case-studies/northstar/northstar.component.html
+++ b/src/app/case-studies/northstar/northstar.component.html
@@ -6,7 +6,8 @@
 
     <div class="case-study__image-text">
       <header class="container-fluid">
-        <h1>North Star Law - Branding and website</h1>
+        <h1>North Star Law</h1>
+        <p>Branding and website</p>
         <strong>Launched: June 2017</strong>
       </header>
     </div>
