--- a/src/app/case-studies/veratrak/veratrak.component.html
+++ b/src/app/case-studies/veratrak/veratrak.component.html
@@ -6,7 +6,8 @@
 
     <div class="case-study__image-text">
       <header class="container-fluid">
-        <h1>Veratrak - Branding and website</h1>
+        <h1>Veratrak</h1>
+        <p>Branding and website</p>
         <strong>Launched: Sept 2018</strong>
       </header>
     </div>
