--- a/src/app/pages/suzannah/suzannah.component.html
+++ b/src/app/pages/suzannah/suzannah.component.html
@@ -15,17 +15,35 @@
       <header>
         <h2>Your story</h2>
       </header>
+
+      <p>
+        I started my professional career as a copywriter for the digital department at Vodafone UK on a graduate
+        marketing scheme. From there I went into front-end development for a short while before I got my first full-time
+        position as a developer at AND Digital (AND) where I fell in love with design. After carving out a design role
+        at AND I was introduce to Samuel and we began doing side projects for Jupiter and the Giraffe together.
+      </p>
+
+      <p>
+        After successfully delivering several projects together we decided to go full-time with Jupiter and the Giraffe.
+      </p>
     </section>
 
     <section class="section">
       <header>
-        <h2>Favourite brands</h2>
+        <h2>Favourite designers/studios</h2>
       </header>
+
+      <ul>
+        <li>Jessica Walsh</li>
+        <li>Ikko Tanaka</li>
+        <li>Leta Sobierajski</li>
+        <li>Saul Bass</li>
+      </ul>
     </section>
 
     <section class="section">
       <header>
-        <h2>Recommended reading</h2>
+        <h2>Favourite books</h2>
       </header>
 
       <div class="row text-center">
