add suzie books

--- a/src/app/pages/suzannah/suzannah.component.html
+++ b/src/app/pages/suzannah/suzannah.component.html
@@ -47,19 +47,27 @@
       </header>
 
       <div class="row text-center">
-        <div class="col-sm-6">
-          <a href="https://amzn.to/2UsvHTu">
+        <div class="col-sm-4">
+          <a href="https://amzn.to/2NMR27C">
             <figure>
-              <img src="/assets/images/how-to-win-friends.jpg" alt="">
-              <figcaption>How to Win Friends and Influence People - Dale Carnegie</figcaption>
+              <img class="profile__book-image" src="/assets/images/a-little-life.jpg" alt="">
+              <figcaption>A Little Life - Hanya Yanagihara</figcaption>
             </figure>
           </a>
         </div>
-        <div class="col-sm-6">
-          <a href="https://amzn.to/2GYQong">
+        <div class="col-sm-4">
+          <a href="https://amzn.to/2ERmSxu">
             <figure>
-              <img src="/assets/images/start-with-why.jpg" alt="">
-              <figcaption>Start With Why - Simon Sinek</figcaption>
+              <img class="profile__book-image" src="/assets/images/a-fine-balance.jpg" alt="">
+              <figcaption>A Fine Balance - Rohinton Mistry</figcaption>
+            </figure>
+          </a>
+        </div>
+        <div class="col-sm-4">
+          <a href="https://amzn.to/2ERwTKV">
+            <figure>
+              <img class="profile__book-image" src="/assets/images/culture-series.jpg" alt="">
+              <figcaption>The Culture Series - Ian M. Banks</figcaption>
             </figure>
           </a>
         </div>
