--- a/src/assets/sass/elements/_blockquote.scss
+++ b/src/assets/sass/elements/_blockquote.scss
@@ -1,7 +1,7 @@
-blockquote {
-  margin: $space-xlrg 0;
-
-  @include md {
-    margin-left: $space-large;
-  }
-}
+//blockquote {
+//  margin: $space-xlrg 0;
+//
+//  @include md {
+//    margin-left: $space-large;
+//  }
+//}
