--- a/src/app/pages/home/friends/friends.component.scss
+++ b/src/app/pages/home/friends/friends.component.scss
@@ -61,4 +61,27 @@
       display: block;
     }
   }
+
+  .slider {
+    position: relative;
+    margin: 50px 20px;
+    box-sizing: content-box;
+  }
+
+  .slide {
+    //position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    transition: opacity 1s ease;
+    padding: 0;
+    margin: 0;
+
+    &--visible {
+      opacity: 1;
+      transition-delay: 1s;
+    }
+  }
 }
