--- a/src/app/global/footer/footer.component.html
+++ b/src/app/global/footer/footer.component.html
@@ -2,7 +2,7 @@
     <div class="container-fluid">
       <blockquote class="text-center">
         <q>You've made it to the bottom!</q>
-        <footer>- Jupiter and the Giraffe</footer>
+        <footer>Jupiter and the Giraffe</footer>
       </blockquote>
       <section>
         <header>
