--- a/src/app/global/header/header.component.scss
+++ b/src/app/global/header/header.component.scss
@@ -12,7 +12,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: $space-small;
+  padding: $space-small 15px;
 
   @include md {
     padding: $space-small $space-large;
@@ -49,7 +49,10 @@
 
     li {
       display: inline-block;
-      margin-left: $space-large;
+
+      @include md {
+        margin-left: $space-large;
+      }
     }
   }
 }
