--- a/src/app/hero/hero.component.scss
+++ b/src/app/hero/hero.component.scss
@@ -17,6 +17,14 @@
       min-height: 500px;
     }
 
+    h1 {
+      @include font-size($heading-2-mobile);
+
+      @include md {
+        @include font-size($heading-1);
+      }
+    }
+
     .hero {
       &__logo {
         position: absolute;
