--- a/src/app/pages/who/who.component.html
+++ b/src/app/pages/who/who.component.html
@@ -24,7 +24,7 @@
 
     <section class="who__images">
       <header>
-        <h3>Our family</h3>
+        <h3>Our fleet</h3>
       </header>
 
       <div class="row">
