--- a/src/app/pages/samuel/samuel.component.html
+++ b/src/app/pages/samuel/samuel.component.html
@@ -32,8 +32,10 @@
         <h2>Favourite brands</h2>
       </header>
 
-      <div>Apple (of course)</div>
-      Beavertown Brewery (UK)
+      <ul>
+        <li>Apple</li>
+        <li>SpaceX</li>
+      </ul>
     </section>
 
     <section class="section">
