--- a/src/app/pages/samuel/samuel.component.html
+++ b/src/app/pages/samuel/samuel.component.html
@@ -32,10 +32,20 @@
         <h2>Favourite brands</h2>
       </header>
 
-      <ul>
-        <li>Apple</li>
-        <li>SpaceX</li>
-      </ul>
+      <div class="row text-center">
+        <div class="col-sm-6">
+          <figure>
+            <img src="/assets/images/apple.png" alt="">
+            <figcaption>Apple</figcaption>
+          </figure>
+        </div>
+        <div class="col-sm-6">
+          <figure>
+            <img src="/assets/images/spacex.png" alt="">
+            <figcaption>SpaceX</figcaption>
+          </figure>
+        </div>
+      </div>
     </section>
 
     <section class="section">
