--- a/src/app/global/email-popup/email-popup.component.html
+++ b/src/app/global/email-popup/email-popup.component.html
@@ -16,7 +16,7 @@
         target="_blank"
         novalidate
         [formGroup]="emailSignup"
-        (ngSubmit)="sendForm(emailSignup.value)"
+        (ngSubmit)="sendForm(emailSignup.value).bind(this)"
       >
         <div id="mc_embed_signup_scroll">
           <h3 class="h3 email-popup__header">Stay en brand.</h3>
@@ -49,9 +49,7 @@
                 class="btn email-popup__button"
                 [disabled]="!emailSignup.valid || sending"
               >
-                {{sending ? '' : 'Subscribe'}}
-
-                <span [ngClass]="{sending: 'fa fa-spinner fa-spin'}" aria-hidden="true"></span>
+                Subscribe <span [ngClass]="{'fa fa-spinner fa-spin': sending}" aria-hidden="true"></span>
               </button>
             </div>
           </div>
