--- a/src/app/pages/home/friends/friends.component.html
+++ b/src/app/pages/home/friends/friends.component.html
@@ -5,7 +5,7 @@
     </header>
 
     <div #slider class="slider" aria-live="polite">
-      <blockquote class="slide" *ngFor="let quote of quotes; let i = index" [ngClass]="{'slide--visible': (i + 1) === currentActiveSlide}">
+      <blockquote class="slide" #slide *ngFor="let quote of quotes; let i = index" [ngClass]="{'slide--visible': (i + 1) === currentActiveSlide}">
         <div [innerHTML]="quote.content.rendered"></div>
         <footer [innerHTML]="quote.title.rendered"></footer>
       </blockquote>
