--- a/src/app/pages/strategy/strategy.component.html
+++ b/src/app/pages/strategy/strategy.component.html
@@ -8,7 +8,7 @@
 
     <p>
       This stage in the project gives us the opportunity to delve deeper into your pain points to better understand
-      your problems and pain points. We encourage you to dig deep and think about your audience and build user profiles,
+      your problems. We encourage you to dig deep and think about your audience and build user profiles,
       think about your company and where you want to position it and seek your competitors to get the upper hand.
     </p>
 
