--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -46,7 +46,7 @@
   <div *ngIf="developmentMode; else map" class="text-center">Map will not load in dev mode</div>
 
   <ng-template #map>
-    <agm-map *ngIf="!developmentMode" [zoom]="2" [latitude]="0" [longitude]="151.2092955" [mapDraggable]="false" [zoomControl]="false"
+    <agm-map *ngIf="!developmentMode && isClient" [zoom]="2" [latitude]="0" [longitude]="151.2092955" [mapDraggable]="false" [zoomControl]="false"
              [streetViewControl]="false" [styles]="styles">
       <agm-marker [latitude]="-33.8688197" [longitude]="151.2092955"></agm-marker>
       <agm-marker [latitude]="51.5074" [longitude]="0.1278" [opacity]=".7"></agm-marker>
