--- a/src/app/global/footer/footer.component.html
+++ b/src/app/global/footer/footer.component.html
@@ -18,7 +18,9 @@
       </section>
 
       <div class="row">
-        <div class="col-md-10"><app-email-popup></app-email-popup></div>
+        <div class="col-md-10">
+          <app-email-popup></app-email-popup>
+        </div>
       </div>
 
       <ul class="footer__social list-unstyled list-inline">
