add access to wordpress and get smaller images

--- a/src/app/global/header/header.component.scss
+++ b/src/app/global/header/header.component.scss
@@ -49,6 +49,7 @@
 
     li {
       display: inline-block;
+      margin-right: $space-large;
 
       @include md {
         margin-left: $space-large;
