--- a/src/app/global/header/header.component.scss
+++ b/src/app/global/header/header.component.scss
@@ -52,6 +52,7 @@
       margin-right: $space-large;
 
       @include md {
+        margin-right: 0;
         margin-left: $space-large;
       }
     }
