Feature/speed up page load (#54)
* add access to wordpress and get smaller images

* fix tests

* add showMyElement

* update margin

--- a/src/app/global/header/header.component.scss
+++ b/src/app/global/header/header.component.scss
@@ -49,8 +49,10 @@
 
     li {
       display: inline-block;
+      margin-right: $space-large;
 
       @include md {
+        margin-right: 0;
         margin-left: $space-large;
       }
     }
