--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -17,6 +17,60 @@
         Taking your spark, refining it through design and bringing your audience along for the ride.
       </p>
 
+      <div class="row">
+        <section class="col-sm-6 text-left">
+          <img src="/assets/images/strategy.jpg" alt="">
+          <h3>Strategy</h3>
+          <p>
+            We kick things off the right way with a facilitated Strategy session. With you, we get to know your company,
+            your
+            problems, your users and your goals so there’s method to our madness. It’s plain sailing from then on in.
+          </p>
+
+          <p>
+            Learn more about <a [routerLink]="['/service/strategy']">Strategy</a>.
+          </p>
+        </section>
+        <section class="col-sm-6 text-left">
+          <img src="/assets/images/brand.jpg" alt="">
+          <h3>Branding</h3>
+          <p>
+            Brand is more than a logo. With us, build a better brand, one that speaks to the right customers. We create a <a
+            [routerLink]="['/service/branding']">brand strategy</a> that
+            showcases your values as well as positioning you in a market where you'll stand out.
+          </p>
+
+          <p>
+            Learn more about <a [routerLink]="['/service/branding']">branding</a>.
+          </p>
+        </section>
+        <section class="col-sm-6 text-left">
+          <img src="/assets/images/design.jpg" alt="">
+          <h3>Design</h3>
+          <p>
+            We believe great design is everything so we go to great lengths to make sure your design compliments your
+            brand perfectly. From websites to beer labels graphic design exists at the core and we apply it to whatever
+            challenge you bring.
+          </p>
+
+          <p>
+            Learn more about <a [routerLink]="['/service/design']">design</a>.
+          </p>
+        </section>
+        <section class="col-sm-6 text-left">
+          <img src="/assets/images/website.jpg" alt="">
+          <h3>Websites</h3>
+          <p>
+            We build beautiful and enjoyable online experiences in the latest technologies. Whether it’s a
+            marketing site or an ecommerce system, let the tech evaporate from your concern.
+          </p>
+
+          <p>
+            Learn more about <a [routerLink]="['/service/web-development']">websites</a>.
+          </p>
+        </section>
+      </div>
+
       <div class="text-center padding-top--lg padding-bottom--lg">
         <a href="" [routerLink]="['/what-we-do']" class="btn btn--lg btn--outline btn--dark">
           <span aria-hidden="true" class="vertical-align">🧠 </span>What can we do?
@@ -122,7 +176,8 @@
       </p>
 
       <div class="section text-center">
-        <a [routerLink]="['/contact']" class="btn btn--lg btn--outline btn--dark"><span aria-hidden="true" class="vertical-align">🚀 </span>Let's
+        <a [routerLink]="['/contact']" class="btn btn--lg btn--outline btn--dark"><span aria-hidden="true"
+                                                                                        class="vertical-align">🚀 </span>Let's
           go!</a>
       </div>
     </section>
