--- a/src/assets/sass/elements/_h.scss
+++ b/src/assets/sass/elements/_h.scss
@@ -44,6 +44,11 @@ h4 {
   margin-bottom: $space-small;
 }
 
+.h1 { @extend h1; }
+.h2 { @extend h2; }
+.h3 { @extend h3; }
+.h4 { @extend h4; }
+
 @keyframes blink {
   from {
     opacity: 1;
